fixed group search alignment

--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -63,6 +63,7 @@
 }
 
 #search-groups-button {
+  margin: 0;
   font-family: 'Quicksand', sans-serif;
   text-decoration: none;
   font-size: 16px;
